--- a/qmd/_04_key_to_great_ml_ds_teams.qmd
+++ b/qmd/_04_key_to_great_ml_ds_teams.qmd
@@ -2,9 +2,9 @@
 
 ::: {.notes}
 
-- So now that I've convinced you that a multilingual data science team can provide a lot of benefits, I'm going to give you the secret to making it work
+- So now that I've convinced you that a multilingual data science team can provide a lot of benefits, I'm going to give you the secret to making it work < increment >
 - So this is going to sound non-technical, but I've found that the key to making multilingual data science teams work is an extra dose of empathy
-- I'd argue that empathy is an important ingredient in *any* data science team, but especially so for teams using R & Python
+- I'd argue that empathy is an important ingredient in *any* data science team, but *especially so* for teams using R & Python together
 
 :::
 
