--- a/qmd/_09_final_thoughts.qmd
+++ b/qmd/_09_final_thoughts.qmd
@@ -1,18 +1,21 @@
-## Final Thoughts
+## Wrapping Up
 
 <br>
 
-![](www/final-thoughts.png)
+{{< fa link >}} <a href="https://www.ketchbrookanalytics.com" style="color: #e58c8c;">ketchbrook.com</a>
+
+<br>
+
+{{< fa brands linkedin >}} <a href="https://www.linkedin.com/in/michaeljthomas2" style="color: #e58c8c;">in/michaeljthomas2</a>
+
+<br>
+
+{{< fa brands bluesky >}} <a href="https://bsky.app/profile/mike-thomas.bsky.social" style="color: #e58c8c;">@mike-thomas.bsky.social</a>
 
 ::: {.notes}
 
-
-- **Comment, comment, comment** your code (talking about inline comments; we'll talk about other types of documentation shortly)
-- Lastly, if you're coming from Python and working with an R team that doesn't have a lot of OOP experience (I'd argue that R is used more as a  functional programming language than it is an OOP language), you may want to avoid OOP when a functional approach is just as good
-
-- Empathy mindset; put yourself in the shoes of the reviewer or other team members that may be looking at your code
-- Our team is actually multinlingual not just from a programming language perspective, but also from a spoken language perspective -- there are folks for whom English is their second language; the idiosynchracies that exist within each of our native languages can lead to someone saying something that may be interpreted as incorrect or even offensive -- make sure you figure out what their intention was with that statement before reacting
-    + If you're on the other side of that, make sure you're using language that's as straightforward as possible, or preface what you want to say with something like "I don't know if I'm saying this right..."
-    + Sometimes this can be just as much the case, or just as important, with 2 individuals who are both native English speakers
+- To put this all back together, it's easy to say that successful team collaboration requires empathy, but these are the technical ways that we've "hacked" empathy within our team that keeps everyone happy and productive
+- I'd be remiss not to shout out Emily Reiderer, who previously gave a take called "Python Rgenomics", which was a big inspiration for this talk and how we think about multilingual data science at Ketchbrook, and I'd recommend checking it out as a nice complement to this talk if you're interested in exploring this topic further
+- If you'd like to get in touch with me, you can find me on LinkedIn or BlueSky, or at our company website
 
 :::
