--- a/qmd/_09_final_thoughts.qmd
+++ b/qmd/_09_final_thoughts.qmd
@@ -5,7 +5,7 @@
 ::: {.notes}
 
 - To put this all back together, it's easy to say that successful team collaboration requires empathy, but these are the technical ways that we've "hacked" empathy within our team that keeps everyone happy and productive
-- Lastly a couple quick shout outs -- I'd be remiss not to mention Emily Reiderer, who previously gave a take called "Python Rgenomics", which was a big inspiration for this talk and how we think about multilingual data science at Ketchbrook, and I'd recommend checking it out as a nice complement to this talk if you're interested in exploring this topic further
+- Lastly a couple quick shout outs -- I'd be remiss not to mention Emily Reiderer, who previously gave a talk called "Python Rgenomics", which was a big inspiration for this talk and how we think about multilingual data science at Ketchbrook, and I'd recommend checking it out as a nice complement to this talk if you're interested in exploring this topic further
 
 :::
 
@@ -25,7 +25,7 @@
 
 <br>
 
-{{< fa brands github >}} <a href="https://github.com/mthomas-ketchbrook" style="color: #e58c8c;">@mthomas-ketchbrook</a>
+{{< fa brands github >}} <a href="https://github.com/mthomas-ketchbrook" style="color: #e58c8c;">mthomas-ketchbrook</a> | <a href="https://github.com/ketchbrookanalytics" style="color: #e58c8c;">ketchbrookanalytics</a>
 
 ::: {.notes}
 
